# steam-wishlist-pulse

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  cliff.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
rust/: .gitignore  Cargo.toml  build.rs  dist-workspace.toml
rust/src/: anomaly.rs  common.rs  config.rs  crypto.rs  db.rs  discord.rs  error.rs  main.rs  steam.rs  telegram.rs  web.rs
scripts/: clear_app_data.py  seed_fake_data.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: Admin.svelte  AdminGamesTab.svelte  AdminPasswordsTab.svelte  App.svelte  Chart.svelte  CountryPieChart.svelte  Dashboard.svelte  GameDetail.svelte  Login.svelte  LogoBrand.svelte  MilestoneCelebration.svelte  PulseTitle.svelte  Setup.svelte  SyncProgressBar.svelte  api.ts  app.css  constants.ts  healthStore.ts  notificationSound.ts  types.ts  utils.ts
